Bug 32482 - [845G] mesa crash due to "Disable BLT" patch
Summary: [845G] mesa crash due to "Disable BLT" patch
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-17 15:46 UTC by Balló György
Modified: 2010-12-20 03:00 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Balló György 2010-12-17 15:46:14 UTC
With the current xf86-video-intel driver (2.13.902), OpenGL-based applications are not displayed correctly, and sometimes they crash X. I use an Intel 845G graphics card. When I revert the following patch, it solves the problem:
"Disable BLT for i830 and 845G"
http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/commit/?id=0bb135c40e5ac1bf7593ec1d68d2815cbf47aa25

Distribution:
Arch Linux

Package versions:
kernel26 2.6.36.2
xorg-server 1.9.3
libdrm 2.4.23
xf86-video-intel 2.13.902
mesa 7.9.99.git20101217
Comment 1 Chris Wilson 2010-12-20 03:00:03 UTC
With information about the crash, I can't fix those bugs since they are bugs in X. However, the offset graphics are a regression, so reverting for release.

commit 1ac2e04023f84dbf1f3db2ecad1cadd159aa614d
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Dec 20 10:55:11 2010 +0000

    Undo: Disable BLT for i830 and 845G
    
    Reported-by: György Balló  <ballogy@freestart.hu>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=32482
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.